--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+<repositories>
+    <repository>
+        <id>com.teamdev</id>
+        <url>https://europe-maven.pkg.dev/jxbrowser/releases</url>
+    </repository>
+</repositories>
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -21,6 +27,17 @@
             <version>17</version>
             <type>jar</type>
         </dependency>
+<dependency>
+    <groupId>com.teamdev.jxbrowser</groupId>
+    <artifactId>jxbrowser-javafx</artifactId>
+    <version>7.24.3</version>
+</dependency>
+<dependency>
+        <groupId>com.teamdev.jxbrowser</groupId>
+        <artifactId>jxbrowser-cross-platform</artifactId>
+        <version>7.24.3</version>
+        <type>pom</type>
+    </dependency>
     </dependencies>
     <build>
         <plugins>
