--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mycompany</groupId>
+    <groupId>com.teamdev.jxbrowser.quickstart.maven</groupId>
+
     <artifactId>StudyCafe</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jxbrowser.version>7.24.3</jxbrowser.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-<repositories>
+    <repositories>
     <repository>
         <id>com.teamdev</id>
         <url>https://europe-maven.pkg.dev/jxbrowser/releases</url>
@@ -27,17 +29,18 @@
             <version>17</version>
             <type>jar</type>
         </dependency>
-<dependency>
-    <groupId>com.teamdev.jxbrowser</groupId>
-    <artifactId>jxbrowser-javafx</artifactId>
-    <version>7.24.3</version>
-</dependency>
-<dependency>
-        <groupId>com.teamdev.jxbrowser</groupId>
-        <artifactId>jxbrowser-cross-platform</artifactId>
-        <version>7.24.3</version>
-        <type>pom</type>
-    </dependency>
+        <dependency>
+            <groupId>com.teamdev.jxbrowser</groupId>
+            <artifactId>jxbrowser-javafx</artifactId>
+            <version>7.24.3</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.teamdev.jxbrowser</groupId>
+            <artifactId>jxbrowser</artifactId>
+            <version>7.24.3</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
